# readable-steno

./: .gitignore  README.md
config/: readable_steno.h
dev_log/: #3-21_07_2025-25_07_2025.md  #4-28_07_2025-08_08_2025.md  #5-11_08_2025-15_08_2025.md  #6-18_08_2025-29_08_2025.md  #7-08_09_2025-24_09_2025.md  14_07_2025-18_07_2025.md  30_06_2025-11_7_2025.md
read_code/: .gitignore  CMakeLists.txt  keymap.c  keymap.h  led_driver.c  led_driver.h  main.c  translator.py  tusb_config.h  usb_descriptors.c
